765 - cli - Process ‘-’ properly in the component name 